k8s-manifests/overlays/uat/superapp/client/payments/patch/patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: split-payment
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: split-payment
        image: harbor.cbe.com.et/cbe-superapp/split-payment-uat
        imagePullPolicy: Always
